Revert "applied fix for #1172 - Clear button overlaps text"
This reverts commit fd07c11484caf2f515f17edfbb576b2b28f2366f.

--- a/select2.css
+++ b/select2.css
@@ -81,10 +81,6 @@ Version: @@ver@@ Timestamp: @@timestamp@@
     background-image: linear-gradient(top, #eeeeee 0%,#ffffff 90%);
 }
 
-.select2-container.select2-allowclear .select2-choice span {
-    margin-right: 42px;
-}
-
 .select2-container .select2-choice span {
     margin-right: 26px;
     display: block;
@@ -98,11 +94,11 @@ Version: @@ver@@ Timestamp: @@timestamp@@
 }
 
 .select2-container .select2-choice abbr {
-    display: inline-block;
+    display: block;
     width: 12px;
     height: 12px;
     position: absolute;
-    right: 24px;
+    right: 26px;
     top: 8px;
 
     font-size: 1px;
@@ -175,7 +171,7 @@ Version: @@ver@@ Timestamp: @@timestamp@@
 }
 
 .select2-container .select2-choice div {
-    display: inline-block;
+    display: block;
     width: 18px;
     height: 100%;
     position: absolute;
